--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "vant": "^2.0.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
