--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vant": "^2.0.5",
     "vconsole": "^3.3.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -25,7 +26,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-cli-plugin-vant": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.1.2"
   },
   "eslintConfig": {
     "root": true,
